tests/integration/typecheck/fail/enum_match_variant_not_covered.ncl
# test.type = 'error'
# eval = 'typecheck'
# 
# [test.metadata]
# error = 'TypecheckError::ExtraRow'
#
# [test.metadata.expectation]
# ident = 'bar'
match { 'foo => 3 } 'bar : Number